styles.css
* {
  margin: 0;
  box-sizing: border-box;
}

body {
  font-family: Poppins, sans-serif;
  background-color: #e5e5e5;
}

.header-container {
  background-image: url("images/header-background-mobile.svg");
  background-repeat: no-repeat;
  width: 375px;
  margin: 0 auto;
  height: 718px;
  padding-right: 24px;
}

.nav-menu {
  display: flex;
  justify-content: space-between;
}

h1 {
  width: 327px;
  height: 150px;
  margin-left: 24px;
  margin-top: 128px;
  margin-bottom: 12px;
  font-size: 40px;
  font-weight: 700;
  color: #172b4d;
}

p {
  width: 327px;
  height: 146px;
  margin-left: 24px;
  margin-top: 12px;
  font-size: 16px;
  color: #344563;
}

h3 {
  margin-top: 12px;
  margin-bottom: 12px;
  margin-left: 24px;
  color: #7f8cff;
  font-weight: 500;
}

.logo {
  margin-top: 58px;
  margin-left: 24px;
}

.menu-icon {
  margin-top: 63px;
}

.social-icons ul {
  display: flex;
  list-style: none;
  justify-content: flex-start;
  flex-direction: row;
}

.social-icons ul li {
  display: inline-block;
  padding-right: 20px;
}

